fix: overflow scroll to auto

--- a/frontend/src/components/BoardView/BoardView.css
+++ b/frontend/src/components/BoardView/BoardView.css
@@ -13,7 +13,7 @@
 
 .label-name {
     @apply text-notion text-sm leading-[0.875rem] font-bold;
-    @apply max-h-16 overflow-scroll focus:outline-none;
+    @apply max-h-16 overflow-auto focus:outline-none;
 }
 
 .label__line {
